# awesome-sails

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/: release.yml
.github/workflows/: ci.yml  labeler.yml  release.yml
crates/access-control/: Cargo.toml
crates/access-control/src/: lib.rs
crates/awesome-sails/: Cargo.toml  README.md
crates/awesome-sails/access-control/: Cargo.toml  README.md
crates/awesome-sails/access-control/src/: lib.rs
crates/awesome-sails/src/: lib.rs
crates/awesome-sails/vft/: Cargo.toml  README.md
crates/awesome-sails/vft-admin/: Cargo.toml  README.md
crates/awesome-sails/vft-admin/src/: lib.rs
crates/awesome-sails/vft-extension/: Cargo.toml  README.md
crates/awesome-sails/vft-extension/src/: lib.rs
crates/awesome-sails/vft-metadata/: Cargo.toml  README.md
crates/awesome-sails/vft-metadata/src/: lib.rs
crates/awesome-sails/vft-native-exchange/: Cargo.toml  README.md
crates/awesome-sails/vft-native-exchange-admin/: Cargo.toml  README.md
crates/awesome-sails/vft-native-exchange-admin/src/: lib.rs
crates/awesome-sails/vft-native-exchange/src/: lib.rs
crates/awesome-sails/vft/src/: lib.rs
crates/awesome-sails/vft/utils/: Cargo.toml
crates/awesome-sails/vft/utils/src/: balances.rs  lib.rs
crates/vft-pack/: Cargo.toml
crates/vft-pack/access-control/src/: lib.rs
crates/vft-pack/src/: lib.rs
crates/vft-pack/vft/: Cargo.toml
crates/vft-pack/vft-admin/: Cargo.toml
crates/vft-pack/vft-admin/src/: lib.rs
crates/vft-pack/vft-extension/: Cargo.toml
crates/vft-pack/vft-extension/src/: lib.rs
crates/vft-pack/vft-metadata/: Cargo.toml
crates/vft-pack/vft-native-exchange-admin/: Cargo.toml
crates/vft-pack/vft-native-exchange-admin/src/: lib.rs
crates/vft-pack/vft/utils/: Cargo.toml
crates/vft-pack/vft/utils/src/: balances.rs
services/: Cargo.toml
services/counter/: Cargo.toml
services/counter/src/: lib.rs
services/ping-pong/: Cargo.toml
services/ping-pong/src/: lib.rs
services/src/: lib.rs
services/tests/: vft.rs
services/tests/common/: mod.rs
services/vft/: Cargo.toml
services/vft-admin/: Cargo.toml
services/vft-admin/src/: lib.rs
services/vft-extension/: Cargo.toml
services/vft-extension/src/: lib.rs
services/vft-metadata/: Cargo.toml
services/vft-metadata/src/: lib.rs
services/vft-native-exchange/: Cargo.toml
services/vft-native-exchange-admin/: Cargo.toml
services/vft-native-exchange-admin/src/: lib.rs
services/vft-native-exchange/src/: lib.rs
services/vft-pack/: Cargo.toml
services/vft-pack/src/: lib.rs
services/vft-pack/vft-admin/: Cargo.toml
services/vft-pack/vft-admin/src/: lib.rs
services/vft-pack/vft-extension/: Cargo.toml
services/vft-pack/vft-metadata/: Cargo.toml
services/vft-pack/vft-native-exchange/: Cargo.toml
services/vft-pack/vft-native-exchange-admin/: Cargo.toml
services/vft-pack/vft-native-exchange/src/: lib.rs
services/vft-pack/vft/utils/: Cargo.toml
services/vft-pack/vft/utils/src/: balances.rs  lib.rs
services/vft-service/: Cargo.toml
services/vft/src/: lib.rs
services/vft/utils/: Cargo.toml
services/vft/utils/src/: allowances.rs  balances.rs  lib.rs
src/: error.rs  event.rs  lib.rs  macros.rs  map.rs  math.rs  pause.rs  storage.rs
tests/access-control-test/app/: Cargo.toml
tests/access-control-test/app/src/: lib.rs
tests/access-control-test/app/tests/: gtest.rs
tests/access-control-test/app/tests/common/: mod.rs
tests/access-control-test/client/: Cargo.toml  access_control_test_client.idl  build.rs
tests/access-control-test/client/src/: access_control_test_client.rs  lib.rs
tests/awesome-sails-test/app/: Cargo.toml
tests/awesome-sails-test/app/src/: lib.rs
tests/awesome-sails-test/app/tests/: gtest.rs
tests/awesome-sails-test/app/tests/common/: mod.rs
tests/awesome-sails-test/client/: Cargo.toml  awesome_sails_test_client.idl  build.rs
tests/awesome-sails-test/client/src/: awesome_sails_test_client.rs  lib.rs
tests/vft-pack-test/app/: Cargo.toml
tests/vft-pack-test/app/src/: lib.rs
tests/vft-pack-test/app/tests/: gtest.rs
tests/vft-pack-test/app/tests/common/: mod.rs
tests/vft-pack-test/client/: Cargo.toml  build.rs  vft_pack_test_client.idl
tests/vft-pack-test/client/src/: lib.rs  vft_pack_test_client.rs
utils/: Cargo.toml  README.md
utils/src/: error.rs  lib.rs  macros.rs  map.rs  math.rs  pause.rs  storage.rs
utils/tests/: math_test.proptest-regressions  math_test.rs
