[workspace.package]
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2024"
homepage = "https://gear-tech.io"
license = "GPL-3.0"
repository = "https://github.com/gear-tech/gear"
rust-version = "1.91"

[workspace]
resolver = "3"

members = [
    "utils",

    # vft-pack
    "services/vft-pack",
    "services/vft-pack/vft",
    "services/vft-pack/vft/utils",
    "services/vft-pack/vft-admin",
    "services/vft-pack/vft-extension",
    "services/vft-pack/vft-metadata",
    "services/vft-pack/vft-native-exchange",
    "services/vft-pack/vft-native-exchange-admin",

    # tests
    "tests/vft-pack-test/app",
    "tests/vft-pack-test/client",
]


[workspace.dependencies]
sails-rs = { version = "0.10.1", default-features = false, features = ["gstd"] }
awesome-sails-utils = { path = "utils", version = "0.1.0", default-features = false }
gtest = "=1.10.0"
gstd = { version = "1.10.0", default-features = false }

# External dependencies
hashbrown = { version = "0.14.5", default-features = false }
derive_more = { version = "2.1.0", default-features = false }
futures = { version = "=0.3.31", default-features = false }
mockall = { version = "=0.14", default-features = false }
parity-scale-codec = { version = "3.7.5", default-features = false }
primitive-types = { version = "0.12.2", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
thiserror = { version = "=2.0.17", default-features = false }
tokio = { version = "=1.48", default-features = false }


# vft-pack
awesome-sails-vft-pack = { path = "services/vft-pack", version = "0.1.0", default-features = false }
awesome-sails-vft-service = { path = "services/vft-pack/vft", version = "0.1.0", default-features = false }
awesome-sails-vft-service-utils = { path = "services/vft-pack/vft/utils", version = "0.1.0", default-features = false }
awesome-sails-vft-admin-service = { path = "services/vft-pack/vft-admin", version = "0.1.0", default-features = false }
awesome-sails-vft-extension-service = { path = "services/vft-pack/vft-extension", version = "0.1.0", default-features = false }
awesome-sails-vft-metadata-service = { path = "services/vft-pack/vft-metadata", version = "0.1.0", default-features = false }
awesome-sails-vft-native-exchange-service = { path = "services/vft-pack/vft-native-exchange", version = "0.1.0", default-features = false }
awesome-sails-vft-native-exchange-admin-service = { path = "services/vft-pack/vft-native-exchange-admin", version = "0.1.0", default-features = false }
