[workspace.package]
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2024"
homepage = "https://gear-tech.io"
license = "GPL-3.0"
repository = "https://github.com/gear-tech/gear"
rust-version = "1.91"

[workspace]
resolver = "3"

members = [
    "utils",

    # vft-pack
    "crates/vft-pack",
    "crates/vft-pack/vft",
    "crates/vft-pack/vft/utils",
    "crates/vft-pack/vft-admin",
    "crates/vft-pack/vft-extension",
    "crates/vft-pack/vft-metadata",
    "crates/vft-pack/vft-native-exchange",
    "crates/vft-pack/vft-native-exchange-admin",

    # access-control
    "crates/access-control",

    # tests
    "tests/vft-pack-test/app",
    "tests/vft-pack-test/client",
    "tests/access-control-test/app",
    "tests/access-control-test/client",
]


[workspace.dependencies]
sails-rs = { version = "0.10.1", default-features = false, features = ["gstd"] }
awesome-sails-utils = { path = "utils", version = "0.1.0", default-features = false }
gtest = "=1.10.0"
gprimitives = { version = "1.10.0", default-features = false }

# External dependencies
hashbrown = { version = "0.14.5", default-features = false }
derive_more = { version = "2.1.0", default-features = false }
futures = { version = "=0.3.31", default-features = false }
mockall = { version = "=0.14", default-features = false }
parity-scale-codec = { version = "3.7.5", default-features = false }
primitive-types = { version = "0.12.2", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
thiserror = { version = "=2.0.17", default-features = false }
tokio = { version = "=1.48", default-features = false }
keccak-const = { version = "0.2", default-features = false }


# vft-pack
awesome-sails-vft-pack = { path = "crates/vft-pack", version = "0.1.0", default-features = false }
awesome-sails-vft-service = { path = "crates/vft-pack/vft", version = "0.1.0", default-features = false }
awesome-sails-vft-service-utils = { path = "crates/vft-pack/vft/utils", version = "0.1.0", default-features = false }
awesome-sails-vft-admin-service = { path = "crates/vft-pack/vft-admin", version = "0.1.0", default-features = false }
awesome-sails-vft-extension-service = { path = "crates/vft-pack/vft-extension", version = "0.1.0", default-features = false }
awesome-sails-vft-metadata-service = { path = "crates/vft-pack/vft-metadata", version = "0.1.0", default-features = false }
awesome-sails-vft-native-exchange-service = { path = "crates/vft-pack/vft-native-exchange", version = "0.1.0", default-features = false }
awesome-sails-vft-native-exchange-admin-service = { path = "crates/vft-pack/vft-native-exchange-admin", version = "0.1.0", default-features = false }

# access-control
awesome-sails-access-control-service = { path = "crates/access-control", version = "0.1.0", default-features = false }
