[workspace.package]
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2024"
homepage = "https://gear-tech.io"
license = "GPL-3.0"
repository = "https://github.com/gear-tech/gear"
rust-version = "1.91"

[workspace]
resolver = "3"

members = [
    "utils",

    # awesome-sails
    "crates/awesome-sails",
    "crates/awesome-sails/vft",
    "crates/awesome-sails/vft/utils",
    "crates/awesome-sails/vft-admin",
    "crates/awesome-sails/vft-extension",
    "crates/awesome-sails/vft-metadata",
    "crates/awesome-sails/vft-native-exchange",
    "crates/awesome-sails/vft-native-exchange-admin",
    "crates/awesome-sails/access-control",

    # tests
    "tests/awesome-sails-test/app",
    "tests/awesome-sails-test/client",
    "tests/access-control-test/app",
    "tests/access-control-test/client",
]


[workspace.dependencies]
sails-rs = { version = "0.10.1", default-features = false, features = ["gstd"] }
awesome-sails-utils = { path = "utils", version = "0.1.0", default-features = false }
gtest = "=1.10.0"
gprimitives = { version = "1.10.0", default-features = false }

# External dependencies
hashbrown = { version = "0.14.5", default-features = false }
derive_more = { version = "2.1.0", default-features = false }
futures = { version = "=0.3.31", default-features = false }
mockall = { version = "=0.14", default-features = false }
parity-scale-codec = { version = "3.7.5", default-features = false }
primitive-types = { version = "0.12.2", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
thiserror = { version = "=2.0.17", default-features = false }
tokio = { version = "=1.48", default-features = false }
keccak-const = { version = "0.2", default-features = false }


# awesome-sails
awesome-sails = { path = "crates/awesome-sails", version = "0.1.0", default-features = false }
awesome-sails-vft = { path = "crates/awesome-sails/vft", version = "0.1.0", default-features = false }
awesome-sails-vft-utils = { path = "crates/awesome-sails/vft/utils", version = "0.1.0", default-features = false }
awesome-sails-vft-admin = { path = "crates/awesome-sails/vft-admin", version = "0.1.0", default-features = false }
awesome-sails-vft-extension = { path = "crates/awesome-sails/vft-extension", version = "0.1.0", default-features = false }
awesome-sails-vft-metadata = { path = "crates/awesome-sails/vft-metadata", version = "0.1.0", default-features = false }
awesome-sails-vft-native-exchange = { path = "crates/awesome-sails/vft-native-exchange", version = "0.1.0", default-features = false }
awesome-sails-vft-native-exchange-admin = { path = "crates/awesome-sails/vft-native-exchange-admin", version = "0.1.0", default-features = false }
awesome-sails-access-control = { path = "crates/awesome-sails/access-control", version = "0.1.0", default-features = false }
