[package]
name = "awesome-sails-services"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Sails dependencies.
sails-rs = { workspace = true, optional = true }

# Local dependencies.
awesome-sails = { workspace = true, optional = true }
awesome-sails-vft-service = { workspace = true, optional = true }
awesome-sails-vft-admin-service = { workspace = true, optional = true }
awesome-sails-vft-extension-service = { workspace = true, optional = true }
awesome-sails-vft-metadata-service = { workspace = true, optional = true }
awesome-sails-vft-native-exchange-service = { workspace = true, optional = true }

[dev-dependencies]
# Sails dependencies.
sails-rs = { workspace = true, features = ["gtest"] }

# External dependencies.
futures.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }

# Local dependencies.
awesome-sails.workspace = true
awesome-sails-services = { workspace = true, features = ["all", "test"] }
test-bin = { workspace = true, features = ["wasm-binary"] }

[features]
default = ["all"]

all = [
    "vft",
    "vft-admin",
    "vft-extension",
    "vft-metadata",
    "vft-native-exchange",
]

vft = ["dep:awesome-sails-vft-service"]
vft-admin = ["dep:awesome-sails-vft-admin-service"]
vft-extension = ["dep:awesome-sails-vft-extension-service"]
vft-metadata = ["dep:awesome-sails-vft-metadata-service"]
vft-native-exchange = ["dep:awesome-sails-vft-native-exchange-service"]

test = [
    "sails-rs/gstd",
    "dep:awesome-sails",
    "awesome-sails-vft-service?/test",
]
