[package]
name = "awesome-sails-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
sails-rs = { workspace = true }
derive_more = { version = "2.1.0", default-features = false }
thiserror = { workspace = true }
ruint = { version = "1.10.0", default-features = false, features = [
    "parity-scale-codec",
] }
