[package]
name = "awesome-sails-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Utilities for Awesome Sails services"

[dependencies]
sails-rs = { workspace = true }
derive_more = { version = "2.1.0", default-features = false }
thiserror = { workspace = true }
bnum = { version = "0.13.0", default-features = false }

[dev-dependencies]
proptest = "1.9.0"
