[package]
name = "awesome-sails"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "VFT Pack for Awesome Sails"

[dependencies]
# Local dependencies.
awesome-sails-vft = { workspace = true, optional = true }
awesome-sails-vft-utils = { workspace = true, optional = true }
awesome-sails-vft-admin = { workspace = true, optional = true }
awesome-sails-vft-extension = { workspace = true, optional = true }
awesome-sails-vft-metadata = { workspace = true, optional = true }
awesome-sails-vft-native-exchange = { workspace = true, optional = true }
awesome-sails-vft-native-exchange-admin = { workspace = true, optional = true }
awesome-sails-access-control = { workspace = true, optional = true }

[features]
default = ["all"]

all = [
    "vft",
    "vft-utils",
    "vft-admin",
    "vft-extension",
    "vft-metadata",
    "vft-native-exchange",
    "vft-native-exchange-admin",
    "access-control",
]

test = ["awesome-sails-vft-utils/test"]

vft = ["dep:awesome-sails-vft", "vft-utils"]
vft-utils = ["dep:awesome-sails-vft-utils"]
vft-admin = [
    "dep:awesome-sails-vft-admin",
    "vft",
    "access-control",
]
vft-extension = [
    "dep:awesome-sails-vft-extension",
    "vft",
]
vft-metadata = ["dep:awesome-sails-vft-metadata"]
vft-native-exchange = [
    "dep:awesome-sails-vft-native-exchange",
    "vft",
]
vft-native-exchange-admin = [
    "dep:awesome-sails-vft-native-exchange-admin",
    "vft-admin",
]
access-control = ["dep:awesome-sails-access-control"]
