[package]
name = "awesome-sails-vft-pack"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# Local dependencies.
awesome-sails-vft-service = { workspace = true, optional = true }
awesome-sails-vft-service-utils = { workspace = true, optional = true }
awesome-sails-vft-admin-service = { workspace = true, optional = true }
awesome-sails-vft-extension-service = { workspace = true, optional = true }
awesome-sails-vft-metadata-service = { workspace = true, optional = true }
awesome-sails-vft-native-exchange-service = { workspace = true, optional = true }
awesome-sails-vft-native-exchange-admin-service = { workspace = true, optional = true }

[features]
default = ["all"]

all = [
    "vft-service",
    "vft-service-utils",
    "vft-admin-service",
    "vft-extension-service",
    "vft-metadata-service",
    "vft-native-exchange-service",
    "vft-native-exchange-admin-service",
]

test = ["awesome-sails-vft-service-utils/test"]

vft-service = ["dep:awesome-sails-vft-service"]
vft-service-utils = ["dep:awesome-sails-vft-service-utils"]
vft-admin-service = ["dep:awesome-sails-vft-admin-service"]
vft-extension-service = ["dep:awesome-sails-vft-extension-service"]
vft-metadata-service = ["dep:awesome-sails-vft-metadata-service"]
vft-native-exchange-service = ["dep:awesome-sails-vft-native-exchange-service"]
vft-native-exchange-admin-service = [
    "dep:awesome-sails-vft-native-exchange-admin-service",
]
