[package]
name = "awesome-sails-vft-service"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
gstd.workspace = true
sails-rs.workspace = true

[dev-dependencies]
env_logger.workspace = true
sails-rs = { workspace = true, features = ["gtest"] }
