[package]
name = "awesome-sails-vft-metadata"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "VFT Metadata Service for Awesome Sails"

[dependencies]
# Sails dependencies.
sails-rs = { workspace = true, features = ["gstd"] }

# Local dependencies.
awesome-sails-utils = { workspace = true }
