[package]
name = "awesome-sails-vft-admin-service"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Sails dependencies.
sails-rs = { workspace = true, features = ["gstd"] }

# External dependencies.
thiserror.workspace = true

# Local dependencies.
awesome-sails-utils = { workspace = true }
awesome-sails-vft-service.workspace = true
