[package]
name = "access-control-test-app"
edition.workspace = true
publish = false

[dependencies]
awesome-sails-vft-pack = { workspace = true, default-features = false, features = ["access-control"] }
awesome-sails-utils = { workspace = true }
sails-rs = { workspace = true }

[build-dependencies]
sails-rs = { workspace = true, features = ["wasm-builder"] }

[dev-dependencies]
access-control-test-client = { path = "../client" }
futures.workspace = true
gtest.workspace = true
sails-rs = { workspace = true, features = ["gtest"] }
tokio = { workspace = true, features = ["rt", "macros"] }
