[package]
name = "awesome-sails-test-app"
edition.workspace = true
publish = false

[dependencies]
awesome-sails = { workspace = true, features = ["all", "test"] }
awesome-sails-utils = { workspace = true }
sails-rs = { workspace = true }

[build-dependencies]
sails-rs = { workspace = true, features = ["wasm-builder"] }

[dev-dependencies]
awesome-sails-test-client = { path = "../client" }
futures.workspace = true
gtest.workspace = true
sails-rs = { workspace = true, features = ["gtest"] }
tokio = { workspace = true, features = ["rt", "macros"] }
