[package]
name = "awesome-sails-test-client"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
mockall = { workspace = true, optional = true }
sails-rs.workspace = true

[build-dependencies]
awesome-sails-test-app = { path = "../app" }
sails-rs = { workspace = true, features = ["build"] }

[features]
with_mocks = ["sails-rs/mockall", "dep:mockall"]
