[package]
name = "awesome-sails-vft-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "VFT Service Utils for Awesome Sails"

[dependencies]
# Sails dependencies.
sails-rs.workspace = true

# External dependencies.
thiserror.workspace = true

# Local dependencies.
awesome-sails-utils = { workspace = true, features = ["gprimitives"] }

[features]
test = []
