[package]
name = "awesome-sails-vft-service-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Sails dependencies.
sails-rs.workspace = true

# External dependencies.
thiserror.workspace = true

# Local dependencies.
awesome-sails-utils = { workspace = true }

[features]
test = []
